--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "jsonresume-theme",
+  "name": "jsonresume-theme-matias",
   "version": "0.0.1",
-  "description": "Private Resume theme",
+  "description": "json resume theme",
   "main": "index.js",
   "scripts": {
     "start": "resume serve",
@@ -10,13 +10,12 @@
   "keywords": [
     "jsonresume"
   ],
-  "repository": "",
+  "repository": "https://github.com/ifeanyi/jsonresume-theme-matias.git",
   "author": "Francis Ifeanyi Okonkwo",
   "license": "ISC",
   "dependencies": {
     "babel": "^5.6.14",
     "less": "^2.5.3",
-    "lodash.template": "^3.6.1",
     "moment": "^2.10.6",
     "react": "^0.14.0",
     "react-dom": "^0.14.3",
@@ -24,6 +23,5 @@
     "resume-schema": "0.0.16"
   },
   "devDependencies": {
-    "gulp-babel": "^5.1.0"
   }
 }
